# Process this file with autoconf to produce a configure script.
#=============================================================================
#
# Copyright (C) 1998-2010 The Boeing Company
#                         Ed Trettevik <eat@nodebrain.org>
#
# NodeBrain is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
#=============================================================================
# Program:  NodeBrain
#
# File:     configure.ac
#
# Title:    NodeBrain autoconf input file
#
# Function:
#
#   This file is processed by autoconf to create the configure script when
#   a NodeBrain developer is creating a distribution.
#
# Description:
#
#   You will not need this file unless you are attempting to use autoconf
#   to build a new configure script to resolve problems on your platform.
#   If so, you would do something like the following.
#
#     o  Modify this file (configure.ac) as necessary.
#     o  Execute autoconf in this directory to create new configure script.
#     o  Execute "make distclean" if you have already run configure.  This
#        will clean up files created previously by configure and make that
#        are not part of the NodeBrain distribution.
#     o  Execute ./configure to create a new Makefile and nbcfg.h file.
#
#   See http://www.gnu.org/software/autoconf for more information.
#
#=============================================================================
# Change History:
#
# Date       Name/Change
# ---------- -----------------------------------------------------------------
# 2004/03/25 Ed Trettevik (version 0.6.0)
#            This file was originally generated by autoscan from the source
#            code and then modified.
# 2005/03/27 eat 0.6.2  Modified for new release
# 2005/06/05 eat 0.6.3  Modified for new release
# 2005/10/11 eat 0.6.4  New release
# 2006/04/20 eat 0.6.5  New release
# 2006/05/15 eat 0.6.6  New release
# 2007/05/04 eat 0.6.7  New release
# 2007/05/17 eat 0.6.7  Perl Compatible Regular Expression library used
# 2007/05/17 eat 0.6.8  New release
# 2008/01/20 eat 0.6.9  New release
# 2008/03/06 eat 0.7.0  New release
# 2008/09/30 eat 0.7.2  New release
# 2008/10/17 eat 0.7.3  Using libtool now
# 2008/11/02 eat 0.7.3  Stopped using libtool here---see lib and module directories
# 2009/01/29 eat 0.7.4  New release - patch to nbtranslator.c
# 2009/02/20 eat 0.7.5  New release - platform port (windows plus others)
# 2009/05/25 eat 0.7.6  New release - debugging nbqueue and cacheEmpty loops
# 2009/05/25 eat 0.7.7  New release 
# 2010/02/04 eat 0.7.8  New release 
# 2010/02/25 eat 0.7.9  New release 
# 2010/05/06 eat 0.8.0  New release - multiple master message log support
# 2010/05/11 eat 0.8.1  Fix to defects in message cabal feature
# 2010/05/21 eat 0.8.2  Fix more defects in message cabal feature
# 2010/09/06 eat 0.8.3  Baseline module
# 2010/10/14 eat 0.8.4  Patches and pid file
# 2010-11-07 eat 0.8.5  Line continue "\" in source files
#=============================================================================

AC_PREREQ(2.62)
AC_INIT([nodebrain],[0.8.5],[bugs@nodebrain.org])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SUBDIRS([lib module])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile nodebrain.spec nb.pc])
AC_OUTPUT
